fix handle PageItem title overflow
Already uses ellipsis as overflow but the text should not wrap. Also added title tooltip.

--- a/src/components/PageItem/PageItem.scss
+++ b/src/components/PageItem/PageItem.scss
@@ -43,6 +43,7 @@
     font-size: $text-size-normal;
     font-family: 'Varela Round';
     color: #343434;
+    white-space: nowrap;
   }
 
   .page__title-ghost {
